--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "isv",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:8000",
+  "proxy": "https://lban.herokuapp.com",
   "dependencies": {
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
